package.json changes

--- a/package.json
+++ b/package.json
@@ -49,6 +49,10 @@
       "last 1 safari version"
     ]
   },
+  "engines": {
+    "node": "17.4.0",
+    "npm": "8.3.1"
+  },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
   "devDependencies": {},
